# EditCLEVR

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
.github/workflows/: pages.yml
artifacts/: benchmark_card.md  croissant_metadata.json  datasheet.md
artifacts/huggingface_dataset/: README.md
docs/: index.html  style.css
editclevr/: __init__.py  download.py  huggingface.py  paths.py
editclevr/baselines/: __init__.py  oracle_encoders.py
editclevr/evaluation/: __init__.py  compute_metrics.py  confidence.py  evaluator.py  feature_cache.py  model_metadata.py  object_assignment.py  oracle_pooling.py  run_evaluation.py  slot_matching.py  stat_tests.py  train_probes.py
editclevr/generator/: __init__.py  atomic_edit.py  blender_adapter.py  build_dataset.py  build_real_dataset.py  build_real_phase1_dataset.py  clevr_upstream.py  difficulty_tagger.py  generate_scenes.py  real_metadata.py  render_real.py  render_real_pair.py  renderer_interface.py  scene.py  schema.py  seed_utils.py  suite_generators.py
editclevr/generator/clevr_blender/: apply_atomic_edit.py  editclevr_scene_ops.py  render_existing_scene.py  render_images.py  utils.py
scripts/: upload_huggingface_dataset.py
