[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "editclevr"
version = "1.0.0"
description = "EditCLEVR: a benchmark for intervention faithfulness in object-centric representations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "object-centric-learning",
    "intervention-faithfulness",
    "CLEVR",
    "synthetic-benchmark",
    "computer-vision",
]
authors = [
    { name = "Anuraag Gadehothur Karnam" },
    { name = "Tarunesh Sathish" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
]

[project.optional-dependencies]
# GT-mask pooling over frozen backbone feature maps (editclevr.evaluation.oracle_pooling).
torch = ["torch>=2.1"]
# Hugging Face dataset download/upload helpers (editclevr.huggingface).
hub = ["huggingface_hub>=0.23"]
all = ["torch>=2.1", "huggingface_hub>=0.23"]

[project.scripts]
editclevr-download = "editclevr.download:main"

[project.urls]
Homepage = "https://huggingface.co/datasets/torux/EditCLEVR"
Repository = "https://github.com/torux-bughunter/EditCLEVR"
Dataset = "https://huggingface.co/datasets/torux/EditCLEVR"

[tool.setuptools.packages.find]
include = ["editclevr*"]

[tool.setuptools.package-data]
"editclevr.generator.clevr_blender" = [
    "*.py",
    "LICENSE-CLEVR",
    "data/*.json",
    "data/*.blend",
    "data/materials/*.blend",
    "data/shapes/*.blend",
]
